--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+APScheduler==3.9.1
 asgiref==3.5.2
+colorama==0.4.5
 Django==4.1
+pytz==2022.2.1
+pytz-deprecation-shim==0.1.0.post0
 qrcode==7.3.1
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
+tzlocal==4.2
