--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ colorama==0.4.5
 Django==4.1
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
+pypng==0.20220715.0
 pytz==2022.2.1
 pytz-deprecation-shim==0.1.0.post0
-qrcode==7.3.1
+qrcode==7.4.2
 six==1.16.0
 sqlparse==0.4.2
+typing_extensions==4.7.1
 tzdata==2022.1
 tzlocal==4.2
